Corrigindo funcionalidades de listar e criar novo filme.

--- a/app/src/main/res/layout/common_layout.xml
+++ b/app/src/main/res/layout/common_layout.xml
@@ -183,5 +183,14 @@
             android:importantForAutofill="no"
             tools:ignore="VisualLintTextFieldSize" />
 
+        <Button
+            android:id="@+id/saveBt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@color/secondary"
+            android:text="@string/save"
+            android:textColor="@color/primary" />
+
     </LinearLayout>
 </ScrollView>
