--- a/app/src/main/res/layout/fragment_register_movie.xml
+++ b/app/src/main/res/layout/fragment_register_movie.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,12 +8,4 @@
     <include layout="@layout/common_layout"
         android:id="@+id/common_layout"/>
 
-    <Button
-        android:id="@+id/saveBt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/secondary"
-        android:background="@color/primary"
-        android:text="@string/save" />
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
